--- a/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
@@ -24,7 +24,7 @@
                     <table class="table dataTable table-responsive">
                         <thead>
                             <tr class="bg-warning">
-                                <th width="75%">@Localizer["CERTIFICATION"]</th>
+                                <th width="75%">@Localizer["CERTIFICATIONS"]</th>
                                 <th class="text-center" width="25%">@Localizer["SAME CERTIFICATIONS"]</th>
                             </tr>
                         </thead>
