--- a/Web/Pages/CCGMember/SearchType.cshtml
+++ b/Web/Pages/CCGMember/SearchType.cshtml
@@ -5,6 +5,7 @@
     var paramdata = new Dictionary<string, string>
                            {
                             {"positionid", Model.PositionId.ToString()},
+                            {"previouspagedetails", "../SearchType" },
                             {"previouspagesimilar", "../SearchType" }
                            };
 }
@@ -19,7 +20,7 @@
         </figure>
     </div>
 </a>
-<a asp-page="Compare/AllObjective" asp-route-positionid="@paramdata">
+<a asp-page="Compare/AllObjective" asp-all-route-data="@paramdata">
     <div class="col-sm-4 mrgn-bttm-md">
         <figure>
             <img src="~/img/CCGMember/compare.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
