--- a/Web/Pages/Student/HighSchool/Trades.cshtml
+++ b/Web/Pages/Student/HighSchool/Trades.cshtml
@@ -27,7 +27,7 @@
                 {
                     var routedata = new Dictionary<string, string>
                  {
-                    {"previouspage", "../../../Student/College/Trades" },
+                    {"previouspage", "../../../Student/HighSchool/Trades" },
                     { "positionid",  position.JobTitleId.ToString()},
                  };
 
@@ -67,7 +67,7 @@
                 {
                     var routedata = new Dictionary<string, string>
                  {
-                    {"previouspage", "../../Student/College/Trades" },
+                    {"previouspage", "../../Student/HighSchool/Trades" },
                     { "positionid",  position.JobTitleId.ToString()},
                  };
 
