--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -193,15 +193,13 @@
                         { "objectiveid",  Model.Obj.ToString() },
                         { "id",  Model.Id.ToString()},
                         { "level",  Model.Level.ToString() },
-
-                               
-        {"pagesubmit", "true" },
-        {"samelevels" , Model.SameLevels},
-        {"higherlevels", Model.HigherLevels },
-        {"certificates", Model.Certificates },
-        {"sameorhigherlevels", Model.SameOrHigherLevels },
-        {"percentmatch", Model.PercentMatch },
-
+                        {"levelobj", Model.LevelObj.ToString() },
+                        {"pagesubmit", "true" },
+                        {"samelevels" , Model.SameLevels},
+                        {"higherlevels", Model.HigherLevels },
+                        {"certificates", Model.Certificates },
+                        {"sameorhigherlevels", Model.SameOrHigherLevels },
+                        {"percentmatch", Model.PercentMatch },
                         {"previouspagesimilar", Model.PreviousPageSimilar },
                         {"previouspagecompare", Model.PreviousPageCompare },
                         {"previouspagedetails", Model.PreviousPageDetails },
