--- a/Web/Pages/CCGMember/Details.cshtml
+++ b/Web/Pages/CCGMember/Details.cshtml
@@ -108,7 +108,7 @@
                             };
                       }
                 <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="CurrentPosition" asp-all-route-data="paramdata">@Localizer["Previous"]</a></li>
-                <li class="next"><a class="btn btn-default" type="button" rel="next" asp-page="SearchType" asp-route-positionid="@Model.Position.JobTitleId">@Localizer["Next"]</a></li>
+                <li class="next"><a class="btn btn-default" type="button" rel="next" asp-page="SearchType" asp-all-route-data="paramdata">@Localizer["Next"]</a></li>
             </ul>
         </nav>
     </div>
