--- a/Web/Pages/CCGMember/SearchType.cshtml
+++ b/Web/Pages/CCGMember/SearchType.cshtml
@@ -6,8 +6,17 @@
                            {
                             {"positionid", Model.PositionId.ToString()},
                             {"previouspagedetails", "../SearchType" },
-                            {"previouspagesimilar", "../SearchType" }
+                            {"previouspagesimilar", "../SearchType" },
+                            { "id",  Model.Id.ToString()},
+                            { "level",  Model.Level.ToString()},
+
                            };
+    var paramdataprevious = new Dictionary<string, string>
+                           {
+                              { "id",  Model.Id.ToString()},
+                              { "level",  Model.Level.ToString()},
+                              {"positionid", Model.PositionId.ToString()}
+                            };
 }
 
 
@@ -28,6 +37,16 @@
         </figure>
     </div>
 </a>
+<div class="row">
+    <div class="col-lg-12 mrgn-bttm-md">
+        <nav role="navigation" class="mrgn-bttm-lg">
+            <h2 class="wb-inv">Document navigation</h2>
+            <ul class="pager">
+                <li class="previous"><a asp-page="Details" asp-all-route-data="@paramdataprevious" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
 
 
 
