--- a/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
@@ -8,6 +8,8 @@
         {"positionid" , Model.PositionId.ToString()},
         { "obj",  Model.ObjectiveId.ToString()},
         {"id", Model.Id.ToString() },
+        {"level", Model.Level.ToString() },
+        {"levelObj", Model.LevelObj },
         {"pagesubmit", "true" },
         {"samelevels" , Model.SameLevels},
         {"higherlevels", Model.HigherLevels },
@@ -24,6 +26,7 @@
 {
         {"positionid", Model.PositionId.ToString()},
         {"id", Model.Id.ToString() },
+        {"level", Model.Level.ToString() },
         {"pagesubmit", "true" },
         {"samelevels" , Model.SameLevels},
         {"higherlevels", Model.HigherLevels },
