--- a/Web/Pages/CCGMember/AllPositions.cshtml
+++ b/Web/Pages/CCGMember/AllPositions.cshtml
@@ -5,36 +5,46 @@
     var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
     var imagefolder = "~/img/CCGMember/";
 }
-<section role="contentinfo">
-    <div class="col-md-12">
+    <section role="contentinfo">
+        <div class="col-md-12">
 
-        <h2><b>@Localizer["AllPositions"]</b></h2>
-        <form>
-            <p>
-                <input type="text" asp-for="Filter" />
-                <input type="submit" text=@Localizer["Keywords"] value=@Localizer["Filter"] />
-            </p>
-        </form>
-        <form>
-            @if (Model.JobGroups.Any(e => Model.Filter == null || e.NameEng.ToLower().Contains(@Model.Filter.ToLower()) || e.Code.ToLower().Contains(@Model.Filter.ToLower())))
-            {
-                @foreach (var jobgroup in Model.JobGroups.Where(e => Model.Filter == null || e.NameEng.ToLower().Contains(@Model.Filter.ToLower()) || e.Code.ToLower().Contains(@Model.Filter.ToLower())))
+            <h2><b>@Localizer["AllPositions"]</b></h2>
+            <form>
+                <p>
+                    <input type="text" asp-for="Filter" />
+                    <input type="submit" text=@Localizer["Keywords"] value=@Localizer["Filter"] />
+                </p>
+            </form>
+            <form>
+                @if (Model.JobGroups.Any(e => Model.Filter == null || e.NameEng.ToLower().Contains(@Model.Filter.ToLower()) || e.Code.ToLower().Contains(@Model.Filter.ToLower())))
                 {
-                    <a asp-page="CurrentLevel" asp-route-id="@jobgroup.Id">
-                        <div class="col-sm-4 mrgn-bttm-md">
-                            <figure>
-                                <img src="@Url.Content(imagefolder + jobgroup.Code + ".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
-                                <figcaption class="text-center"><h6>@(isEnglish ? jobgroup.NameEng : jobgroup.NameFre) (@jobgroup.Code)</h6></figcaption>
-                            </figure>
-                        </div>
-                    </a>
+                    @foreach (var jobgroup in Model.JobGroups.Where(e => Model.Filter == null || e.NameEng.ToLower().Contains(@Model.Filter.ToLower()) || e.Code.ToLower().Contains(@Model.Filter.ToLower())))
+                    {
+                        <a asp-page="CurrentLevel" asp-route-id="@jobgroup.Id">
+                            <div class="col-sm-4 mrgn-bttm-md">
+                                <figure>
+                                    <img src="@Url.Content(imagefolder + jobgroup.Code + ".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+                                    <figcaption class="text-center"><h6>@(isEnglish ? jobgroup.NameEng : jobgroup.NameFre) (@jobgroup.Code)</h6></figcaption>
+                                </figure>
+                            </div>
+                        </a>
+                    }
                 }
-            }
-            else
-            {
-                <h4>@Localizer["NoResults"]</h4>
-            }
-        </form>
-    </div>
-</section>
+                else
+                {
+                    <h4>@Localizer["NoResults"]</h4>
+                }
+            </form>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 mrgn-bttm-md">
+                <nav role="navigation" class="mrgn-bttm-lg">
+                    <h2 class="wb-inv">Document navigation</h2>
+                    <ul class="pager">
+                        <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </section>
 
