--- a/Web/Pages/CCGMember/Similar/SimilarList.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarList.cshtml
@@ -7,6 +7,7 @@
 {
         {"positionid",Model.PositionId.ToString()},
         {"id", Model.Id.ToString() },
+        {"level", Model.Level.ToString() },
         {"pagesubmit", "true" },
         {"samelevels" , Model.SameLevels},
         {"higherlevels", Model.HigherLevels },
@@ -45,6 +46,7 @@
         {"objectiveid",  position.JobTitleId.ToString()},
         {"positionid",  Model.PositionId.ToString()},
         {"id", Model.Id.ToString() },
+        {"level", Model.Level.ToString() },
         {"pagesubmit", "true" },
         {"samelevels" , Model.SameLevels},
         {"higherlevels", Model.HigherLevels },
