--- a/Web/Pages/Candidate/Seagoing/Crew/Engineering/PositionList.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Crew/Engineering/PositionList.cshtml
@@ -30,14 +30,24 @@
                     { "positionid",  position.JobTitleId.ToString()},
                  };
 
-        <tr>
-            <td>@position.JobGroupCode-@position.JobLevelValue</td>
-            <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
-            <td><a asp-page="../../Common/Details" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
-        </tr>
-    }
+                <tr>
+                    <td>@position.JobGroupCode-@position.JobLevelValue</td>
+                    <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
+                    <td><a asp-page="../../Common/Details" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
+                </tr>
+            }
         </tbody>
     </table>
+</div>
+<div class="row">
+    <div class="col-lg-12 mrgn-bttm-md">
+        <nav role="navigation" class="mrgn-bttm-lg">
+            <h2 class="wb-inv">Document navigation</h2>
+            <ul class="pager">
+                <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+            </ul>
+        </nav>
+    </div>
 </div>
 
 
