--- a/Web/Pages/Candidate/Seagoing/Index.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Index.cshtml
@@ -2,27 +2,37 @@
 @inject IViewLocalizer Localizer
 @{
 }
-<section role="contentinfo">
-    <div class="col-md-12">
-        <h2>@Localizer["Q1"]</h2>
-        <div class="row">
-            <div class="col-sm-4">
-                <figure>
-                    <a class="nav-link" asp-page="Officer/Index">
-                        <img src="~/img/CCGMember/SO.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                    </a>
-                    <figcaption><h4 class="text-center">@Localizer["Officer"]</h4></figcaption>
-                </figure>
-            </div>
-            <div class="col-sm-4">
-                <figure>
-                    <a asp-page="Crew/Index">
-                        <img src="~/img/CCGMember/SC.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                    </a>
-                    <figcaption><h4 class="text-center">@Localizer["Crew"]</h4></figcaption>
-                </figure>
+    <section role="contentinfo">
+        <div class="col-md-12">
+            <h2>@Localizer["Q1"]</h2>
+            <div class="row">
+                <div class="col-sm-4">
+                    <figure>
+                        <a class="nav-link" asp-page="Officer/Index">
+                            <img src="~/img/CCGMember/SO.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        </a>
+                        <figcaption><h4 class="text-center">@Localizer["Officer"]</h4></figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm-4">
+                    <figure>
+                        <a asp-page="Crew/Index">
+                            <img src="~/img/CCGMember/SC.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        </a>
+                        <figcaption><h4 class="text-center">@Localizer["Crew"]</h4></figcaption>
+                    </figure>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+        <div class="row">
+            <div class="col-lg-12 mrgn-bttm-md">
+                <nav role="navigation" class="mrgn-bttm-lg">
+                    <h2 class="wb-inv">Document navigation</h2>
+                    <ul class="pager">
+                        <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </section>
 
