--- a/Web/Pages/Candidate/Seagoing/Officer/Engineering/PositionList.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Officer/Engineering/PositionList.cshtml
@@ -6,10 +6,10 @@
     var countmessage = Model.Positions.Length != 1 ? "POSITIONS" : "POSITION";
 }
 
-    <div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
-        <a href="@Url.Action("SimilarListCandidate","ToPdf", new { id = Model.PositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" alt="Print document"></span> </a>
-        <a href="@Url.Action("SimilarListCandidate","ToPdf", new { id = Model.PositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save pull-right" alt="Save document"></span> </a>
-    </div>
+<div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
+    <a href="@Url.Action("SimilarListCandidate","ToPdf", new { id = Model.PositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" alt="Print document"></span> </a>
+    <a href="@Url.Action("SimilarListCandidate","ToPdf", new { id = Model.PositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save pull-right" alt="Save document"></span> </a>
+</div>
 <div class="mrgn-tp-lg">
     <h3 class="text-center">@Localizer["POSITION RESULTS"]</h3>
     <h5>@Model.Positions.Length @Localizer[countmessage]</h5>
@@ -30,14 +30,24 @@
                     {"previouspage", "../Officer/Engineering/PositionList" }
                  };
 
-        <tr>
-            <td>@position.JobGroupCode-@position.JobLevelValue</td>
-            <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
-            <td><a asp-page="../../Common/Details" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
-        </tr>
-    }
+                <tr>
+                    <td>@position.JobGroupCode-@position.JobLevelValue</td>
+                    <td>@(isEnglish? position.JobTitleEng: position.JobTitleFre)</td>
+                    <td><a asp-page="../../Common/Details" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
+                </tr>
+            }
         </tbody>
     </table>
+</div>
+<div class="row">
+    <div class="col-lg-12 mrgn-bttm-md">
+        <nav role="navigation" class="mrgn-bttm-lg">
+            <h2 class="wb-inv">Document navigation</h2>
+            <ul class="pager">
+                <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+            </ul>
+        </nav>
+    </div>
 </div>
 
 
