--- a/Web/Pages/Student/HighSchool/Computer.cshtml
+++ b/Web/Pages/Student/HighSchool/Computer.cshtml
@@ -5,10 +5,10 @@
     var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
 }
 
-<div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
-    <a href="#print"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" alt="@Localizer["print"]"></span> </a>
-    <a href="#save"><span class="glyphicon glyphicon-save pull-right" alt="@Localizer["save"]"></span> </a>
-</div>
+    <div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
+        <a href="@Url.Action("StudentPositionsList", "ToPdf", new { ShoresideIds = Model.ShoresidePositionIds, SeagoingIds = Model.SeagoingPositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" alt="@Localizer["print"]"></span> </a>
+        <a href="@Url.Action("StudentPositionsList", "ToPdf", new { ShoresideIds = Model.ShoresidePositionIds, SeagoingIds = Model.SeagoingPositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save pull-right" alt="@Localizer["save"]"></span> </a>
+    </div>
 <div class="mrgn-tp-lg">
     <h3 class="text-center">@Localizer["seagoing"]</h3>
 
