--- a/Web/Views/ToPdf/GetSimilarPositionsCandidateAsPdf.cshtml
+++ b/Web/Views/ToPdf/GetSimilarPositionsCandidateAsPdf.cshtml
@@ -8,7 +8,7 @@
     var similarpositions = isEnglish ? "SIMILAR POSITIONS" : "POSITIONS SIMILAIRES";
     var level = isEnglish ? "Level" : "Niveau";
     var positiondetails = isEnglish ? "POSITION DETAILS" : "DÉTAILS DU POSTE";
-    var positions = isEnglish ? "POSITIONS" : "POSITIONS";
+    var positions = isEnglish ? "POSITION" : "POSTE";
     var countmessage = Positions.Length != 1 ? "POSITIONS" : "POSITION";
 }
 <div class="mrgn-tp-lg">
